# tasktui

./: CLAUDE.md  Cargo.toml  README.md  prd.md  wireframes.md
src/: config.rs  git.rs  main.rs  models.rs  storage.rs
src/llm/: client.rs  enricher.rs  mod.rs  prompt.rs
src/mcp/: mod.rs  protocol.rs  tools.rs
src/tui/: app.rs  colors.rs  compact.rs  kanban.rs  mod.rs  project_gantt.rs  projects.rs  settings.rs
tasks/: .tasktui-config.yaml  550e8400-e29b-41d4-a716-446655440001.md  550e8400-e29b-41d4-a716-446655440002.md  550e8400-e29b-41d4-a716-446655440003.md  550e8400-e29b-41d4-a716-446655440004.md  550e8400-e29b-41d4-a716-446655440005.md  550e8400-e29b-41d4-a716-446655440006.md  550e8400-e29b-41d4-a716-446655440007.md  6bd53c39-6498-468b-8d67-d01dee411efa.md  e52d8cc5-53a4-4d3d-8cc8-ac0afc0b2cda.md
